# TaxCalculator

./: .gitignore  CMakeLists.txt  readme.md
include/: tax_calculator.h
src/: main.cpp  tax_calculator.cpp
tests/: TaxCalculatorTest.cpp
